# datamanagement-image-compression-bench

./: .gitignore  AGENTS.md  CLAUDE.md  Containerfile  Makefile  README.md  myproject.toml  pyproject.toml  streamlit_app.py
.github/workflows/: publish.yml
compression_format_comparison/: .gitignore  CLAUDE.md  Cargo.toml  README.md
compression_format_comparison/src/: main.rs  test.rs
docs/: .gitignore  _quarto.yml  index.qmd  visualization.qmd
file_write_benchmark/: .gitignore  CLAUDE.md  Cargo.toml  README.md  test_storage.sh
file_write_benchmark/src/: main.rs  test.rs
image_comparison_format/: .gitignore  Cargo.toml
image_comparison_format/src/: main.rs  test.rs
image_comparison_quality/: Cargo.toml  README.md
image_comparison_quality/src/: main.rs  test.rs
image_format_comparison/: CLAUDE.md  Cargo.toml  README.md
image_format_comparison/src/: main.rs  test.rs
image_quality_comparison/: .gitignore  CLAUDE.md  Cargo.toml
image_quality_comparison/src/: main.rs  test.rs
result_csv/: compression_format_comparison_results.csv  image_comparison_format_results.csv  image_comparison_quality_results.csv
