[project]
name = "datamanagement-image-compression-bench"
version = "0.0.0"
description = "CSV visualization app (Streamlit) for JPG/PNG/WEBP comparisons"
requires-python = ">=3.13,<3.14"
readme = false
dependencies = [
  "streamlit",
  "pandas",
  "plotly",
  "pyarrow",
]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pytest",
]

[tool.uv]
default-groups = ["dev"]
