[project]
name = "datamanagement-image-compression-bench"
version = "0.0.0"
description = "Image compression benchmark visualization (Quarto + GitHub Pages)"
requires-python = ">=3.13,<3.14"
readme = false
dependencies = [
  "pandas",
  "pyarrow",
  "matplotlib",
  "jupyter",
  "nbformat",
  "nbclient",
  "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pytest",
]

[tool.uv]
default-groups = ["dev"]
