[package]
name = "file_write_benchmark"
version = "0.1.0"
edition = "2024"
default-run = "file_write_benchmark"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "file_write_benchmark"
path = "src/main.rs"

[[bin]]
name = "test_program"
path = "src/test.rs"
