[package]
name = "image_quality_comparison"
version = "0.1.0"
edition = "2024"
default-run = "image_quality_comparison"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[[bin]]
name = "image_quality_comparison"
path = "src/main.rs"

[[bin]]
name = "test_program"
path = "src/test.rs"